import type { LanguageModelV3CallOptions } from "@ai-sdk/provider";
import type { UIMessage } from "ai";
import { expect, test } from "vitest";
import type { Environment } from "../../environment";
import { formatters } from "../../formatters";
import {
  createEnvironmentPrompt,
  injectEnvironment,
  parseEnvironmentInfo,
  parseEnvironmentInfoResult,
} from "../environment";
import { prompts } from "../index";
import { createSystemPrompt } from "../system";

test("instructions", () => {
  expect(
    createSystemPrompt(
      `# Rules from (abc)`,
      undefined,
      "custom instructions from mcp servers",
    ),
  ).toMatchSnapshot();
});

test("snapshot", () => {
  expect(
    createSystemPrompt(`# Rules from (abc)`),
  ).toMatchSnapshot();
});

test("path guidance preserves paths supplied by tools or context", () => {
  const prompt = createSystemPrompt("");
  expect(prompt).toContain(
    "Preserve paths supplied by tools or context when passing them to subsequent tools",
  );
  expect(prompt).toContain(
    "do not rewrite them between absolute, relative, or URI forms",
  );
  expect(prompt).not.toContain("background job");
  expect(prompt).not.toContain("outputFile");
  expect(prompt).not.toContain(
    "All file paths used by tools must be relative to current working directory",
  );
});

test("active todo prompt describes attemptCompletion checkpoint", () => {
  const prompt = createSystemPrompt("", undefined, undefined, undefined, {
    todoModeEnabled: true,
  });
  expect(prompt).toContain("TODO OBJECTIVES");
  expect(prompt).toContain(
    "You are working with active todos.",
  );
  expect(prompt).toContain(
    "The current todos represent user-provided desired outcomes for the current task.",
  );
  expect(prompt).toContain(
    "Treat todo content as the user's stated intent/outcome",
  );
  expect(prompt).toContain(
    '"completed" means the todo has been audited and verified as complete.',
  );
  expect(prompt).toContain(
    '"cancelled" means the todo is blocked: you are truly at an impasse and cannot make meaningful progress without user input or an external-state change.',
  );
  expect(prompt).toContain(
    'Do not use "cancelled" merely because the work is hard, slow, uncertain, incomplete, or would benefit from clarification.',
  );
  expect(prompt).toContain(
    "attemptCompletion is the completion checkpoint",
  );
  expect(prompt).not.toContain("in the environment");
  expect(prompt).not.toContain("the todo has been audited and verified as achieved");
});

test("system prompt omits todo guidance when todos are not active", () => {
  const prompt = createSystemPrompt("");
  expect(prompt).not.toContain("TODO OBJECTIVES");
  expect(prompt).not.toContain("You are working with active todos.");
});

test("custom agent invocation uses a separate routing instruction", () => {
  expect(prompts.customAgentSystemReminder("tester")).toBe(
    '<system-reminder>The user explicitly invoked the "tester" agent. You must use the newTask tool with agentType="tester" to run it, passing the complete relevant request and context.</system-reminder>',
  );
});

test("pasted text file references instruct the model to read each file", () => {
  expect(
    prompts.pastedTextFileReferences([
      { filePath: "/tmp/pasted-text-1.txt", title: "first" },
      { filePath: "/tmp/pasted-text-2.txt", title: "second" },
    ]),
  ).toBe(`Referenced pasted text files:
- pasted text file: /tmp/pasted-text-1.txt. Read this file before continuing.
- pasted text file: /tmp/pasted-text-2.txt. Read this file before continuing.`);
});

test("custom agent includes custom rules by default", () => {
  expect(
    createSystemPrompt(`# Rules from (abc)`, {
      name: "browser",
      description: "browser agent",
      systemPrompt: "Custom agent prompt",
    }),
  ).toContain("USER'S CUSTOM INSTRUCTIONS");
});

test("custom agent can omit custom rules", () => {
  expect(
    createSystemPrompt(`# Rules from (abc)`, {
      name: "planner",
      description: "planner agent",
      systemPrompt: "Custom agent prompt",
      omitAgentsMd: true,
    }),
  ).not.toContain("USER'S CUSTOM INSTRUCTIONS");
});

test("attemptTodoCompletion custom agent replaces todo audit placeholder", () => {
  const prompt = createSystemPrompt(
    "",
    {
      name: "attemptTodoCompletion",
      description: "audit todos",
      systemPrompt: "Todos to audit:\n{{TODOS}}",
    },
    undefined,
    undefined,
    {
      todos: [
        {
          id: "todo-1",
          content: "Implement todo mode",
          status: "in-progress",
          priority: "medium",
        },
      ],
    },
  );

  expect(prompt).toContain('"id": "todo-1"');
  expect(prompt).toContain('"content": "Implement todo mode"');
  expect(prompt).not.toContain("{{TODOS}}");
});

test("environment", () => {
  expect(
    createEnvironmentPrompt({
        currentTime: "2021-01-01T00:00:00.000Z",
        workspace: {
          activeTabs: ["README.md", "tsconfig.json", "package.json"],

          gitStatus: {
            origin: 'https://github.com/username/repo.git',
            currentBranch: 'add-environment-to-chat-request-body',
            mainBranch: 'main',
            status: 'M packages/vscode-webui-bridge/src/index.ts\nA packages/vscode-webui/src/lib/use-environment.ts\nM packages/vscode-webui/src/lib/vscode.ts\nM packages/vscode-webui/src/routes/chat.tsx\n?? src/fib.test.ts\n?? vitest.config.ts',
            recentCommits: [
              '02b50f727 feat(chat): add environment property to prepareRequestBody',
              '962185adb feat(webui): add new task link and pending component',
            ],
            worktree: {gitdir: '/Users/username/repo/.git/worktrees/add-environment-to-chat-request-body'},
          },
          terminals: [
            {
              name: "Terminal 1",
              isActive: true,
            },
            {
              name: "Terminal 2",
              isActive: false,
              backgroundJobId: "term-user-terminal-1",
            },
            {
              name: "Terminal 3",
              isActive: false,
              backgroundJobId: "bgjob-cmd-job-id-1",
              outputFile: "/tmp/bgjob-cmd-job-id-1.log",
            }
          ]
        },
        todos: [
          {
            content: "fix this",
            id: "1",
            status: "pending",
            priority: "high",
          },
        ],
        info: {
          cwd: "/home/user/project",
          os: "linux",
          homedir: "/home/user",
          shell: "bash",
        },
        }, {name: "Pochi", email: "noreply@getpochi.com"}),
  ).toMatchSnapshot();
});

test("injectEnvironment adds a full environment to multi-message histories without one", () => {
  const messages = [
    createTextMessage("user-1", "user", "legacy question"),
    createTextMessage("assistant-1", "assistant", "legacy answer"),
    createTextMessage("user-2", "user", "follow-up"),
  ];

  const result = injectEnvironment(messages, createTestEnvironment());

  expect(countFullEnvironments(result)).toBe(1);
});

test("injectEnvironment adds a full environment when compaction hides the historical one", () => {
  const fullEnvironment = createEnvironmentPrompt(
    createTestEnvironment(),
    undefined,
  );
  const messages = [
    createTextMessage("user-1", "user", fullEnvironment),
    createTextMessage("assistant-1", "assistant", "old answer"),
    createTextMessage(
      "user-2",
      "user",
      "<compact>Previous conversation summary</compact>",
    ),
    createTextMessage("assistant-2", "assistant", "recent answer"),
    createTextMessage("user-3", "user", "follow-up"),
  ];

  const result = injectEnvironment(messages, createTestEnvironment());
  const modelMessages = formatters.llm(result);

  expect(modelMessages[0]?.id).toBe("user-2");
  expect(countFullEnvironments(modelMessages)).toBe(1);
});

test("injectEnvironment preserves a full environment when regenerating a request", () => {
  const messages = [
    createTextMessage("user-1", "user", "legacy question"),
    createTextMessage("assistant-1", "assistant", "legacy answer"),
    {
      id: "user-2",
      role: "user" as const,
      parts: [
        {
          type: "text" as const,
          text: `<system-reminder>${createEnvironmentPrompt(
            createTestEnvironment(),
            undefined,
          )}</system-reminder>`,
        },
        { type: "text" as const, text: "follow-up" },
      ],
    },
  ];

  const result = injectEnvironment(messages, createTestEnvironment());

  expect(countFullEnvironments(result)).toBe(1);
});

test("injectEnvironment restores a compacted environment before an assistant continuation", () => {
  const environment = createTestEnvironment();
  const messages = [
    createTextMessage(
      "user-0",
      "user",
      createEnvironmentPrompt(environment, undefined),
    ),
    createTextMessage(
      "user-1",
      "user",
      "<compact>Previous conversation summary</compact>",
    ),
    createTextMessage("assistant-1", "assistant", "tool result"),
  ];
  const original = structuredClone(messages);

  const result = injectEnvironment(messages, environment);
  const modelMessages = formatters.llm(result);

  expect(countFullEnvironments(modelMessages)).toBe(1);
  expect(result.map((message) => message.id)).toEqual(
    original.map((message) => message.id),
  );
  expect(result[0]).toEqual(original[0]);
  expect(result[2]).toEqual(original[2]);

  const restored = structuredClone(result);
  injectEnvironment(restored, { ...environment, currentTime: "later" });
  expect(restored).toEqual(result);
  expect(countFullEnvironments(formatters.llm(restored))).toBe(1);
});

test("injectEnvironment preserves assistant-ended history when a full environment remains visible", () => {
  const messages = [
    createTextMessage(
      "user-1",
      "user",
      createEnvironmentPrompt(createTestEnvironment(), undefined),
    ),
    createTextMessage("assistant-1", "assistant", "answer"),
    createTextMessage("user-2", "user", "follow-up"),
    createTextMessage("assistant-2", "assistant", "tool result"),
  ];
  const original = structuredClone(messages);

  injectEnvironment(messages, createTestEnvironment());

  expect(messages).toEqual(original);
});

test("injectEnvironment uses a lite environment when a full one remains visible", () => {
  const messages = [
    createTextMessage(
      "user-1",
      "user",
      createEnvironmentPrompt(createTestEnvironment(), undefined),
    ),
    createTextMessage("assistant-1", "assistant", "answer"),
    createTextMessage("user-2", "user", "follow-up"),
  ];

  const result = injectEnvironment(messages, createTestEnvironment());

  expect(countFullEnvironments(result)).toBe(1);
  expect(getMessageText(result.at(-1))).not.toContain("# System Information");
  expect(getMessageText(result.at(-1))).toContain("# GIT STATUS");
});

test("injectEnvironment places environment before invocation reminders and the prompt", () => {
  const userPrompt = "/demo use this agent";
  const agentReminder = prompts.customAgentSystemReminder("demo");
  const messages: UIMessage[] = [
    {
      id: "message-1",
      role: "user",
      parts: [
        { type: "text", text: agentReminder },
        { type: "text", text: userPrompt },
      ],
    },
  ];

  injectEnvironment(messages, createTestEnvironment());

  expect(messages[0].parts[0]).toMatchObject({
    type: "text",
    text: expect.stringContaining("# System Information"),
  });
  expect(messages[0].parts[1]).toEqual({ type: "text", text: agentReminder });
  expect(messages[0].parts[2]).toEqual({ type: "text", text: userPrompt });
});

test("parseEnvironmentInfo from system message content", () => {
  const prompt = [
    {
      role: "system",
      content: createEnvironmentPrompt(createTestEnvironment(), undefined),
    },
  ] satisfies LanguageModelV3CallOptions["prompt"];

  expect(parseEnvironmentInfo(prompt)).toEqual({
    os: "darwin",
    shell: "zsh",
    homedir: "/Users/pochi",
    cwd: "/Users/pochi/project",
  });
});

test("parseEnvironmentInfo from user text parts", () => {
  const prompt = [
    {
      role: "user",
      content: [
        { type: "text", text: "hello" },
        {
          type: "text",
          text: createEnvironmentPrompt(createTestEnvironment(), undefined),
        },
      ],
    },
  ] satisfies LanguageModelV3CallOptions["prompt"];

  expect(parseEnvironmentInfo(prompt)).toEqual({
    os: "darwin",
    shell: "zsh",
    homedir: "/Users/pochi",
    cwd: "/Users/pochi/project",
  });
});

test("parseEnvironmentInfo does not require a default shell", () => {
  const prompt = [
    {
      role: "system",
      content: `# System Information

Operating System: win32
Default Shell:
Home Directory: C:\\Users\\exile
Current Working Directory: d:\\Icy\\project`,
    },
  ] satisfies LanguageModelV3CallOptions["prompt"];

  expect(parseEnvironmentInfo(prompt)).toEqual({
    os: "win32",
    shell: "",
    homedir: "C:\\Users\\exile",
    cwd: "d:\\Icy\\project",
  });
});

test("parseEnvironmentInfoResult returns a value on success", () => {
  const prompt = [
    {
      role: "system",
      content: createEnvironmentPrompt(createTestEnvironment(), undefined),
    },
  ] satisfies LanguageModelV3CallOptions["prompt"];

  expect(parseEnvironmentInfoResult(prompt)).toEqual({
    success: true,
    value: {
      os: "darwin",
      shell: "zsh",
      homedir: "/Users/pochi",
      cwd: "/Users/pochi/project",
    },
  });
});

test("parseEnvironmentInfoResult returns missing fields on failure", () => {
  expect(parseEnvironmentInfoResult(undefined)).toEqual({
    success: false,
    missingFields: ["os", "homedir", "cwd"],
  });
});

test("parseEnvironmentInfo ignores missing or incomplete environment prompt", () => {
  expect(parseEnvironmentInfo(undefined)).toBeUndefined();
  expect(
    parseEnvironmentInfo([
      {
        role: "system",
        content:
          "# System Information\n\nOperating System: darwin\nDefault Shell: zsh",
      },
    ]),
  ).toBeUndefined();
  expect(
    parseEnvironmentInfo([
      {
        role: "system",
        content:
          "# User Information\n\nOperating System: darwin\nDefault Shell: zsh\nHome Directory: /Users/pochi\nCurrent Working Directory: /Users/pochi/project",
      },
    ]),
  ).toBeUndefined();
});

function createTextMessage(
  id: string,
  role: UIMessage["role"],
  text: string,
): UIMessage {
  return {
    id,
    role,
    parts: [{ type: "text", text }],
  };
}

function getMessageText(message: UIMessage | undefined): string {
  return (
    message?.parts
      .filter((part) => part.type === "text")
      .map((part) => part.text)
      .join("\n") ?? ""
  );
}

function countFullEnvironments(messages: UIMessage[]): number {
  return messages.reduce(
    (count, message) =>
      count +
      message.parts.filter(
        (part) =>
          part.type === "text" &&
          part.text.includes("# System Information") &&
          part.text.includes("Operating System: darwin") &&
          part.text.includes("Home Directory: /Users/pochi") &&
          part.text.includes("Current Working Directory: /Users/pochi/project"),
      ).length,
    0,
  );
}

function createTestEnvironment(): Environment {
  return {
    currentTime: "2026-06-23T00:00:00.000Z",
    workspace: {},
    todos: [],
    info: {
      cwd: "/Users/pochi/project",
      os: "darwin",
      homedir: "/Users/pochi",
      shell: "zsh",
    },
  };
}
